# bevy-persistent

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: alternating-crouch-key.rs  autosave.rs  migrations.rs  smart-window.rs
src/: builder.rs  error.rs  format.rs  lib.rs  persistent.rs  prelude.rs  storage.rs
tests/: builder.rs  format.rs  persistent.rs  storage.rs
tests/common/: mod.rs
