[package]
name = "bevy-persistent"
description = "A Bevy helper to easily manage resources that need to persist across game sessions."
categories = ["config", "filesystem", "game-development"]
keywords = ["gamedev", "bevy", "persistent", "resource"]
repository = "https://github.com/umut-sahin/bevy-persistent/"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
    "Shane Lillie <ignignokterr@gmail.com>",
    "Eri Pazos <eri@inventati.org>",
    "Scott Godwin <sgodwincs@gmail.com>",
    "Helium <liqhelium@gmail.com>",
]

[dependencies]
bevy = { version = "0.15.0", default-features = false }
bincode = { version = "1.3", optional = true }
ron = { version = "0.8", optional = true }
serde = { version = "1.0" }
serde_ini = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = { version = "1.0" }
toml = { version = "0.8", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-storage = { version = "0.3" }

[dev-dependencies]
anyhow = { version = "1.0" }
dirs = { version = "5.0" }
bevy = { version = "0.15.0", features = ["serialize"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tempfile = { version = "3.4" }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[features]
all = ["bincode", "ini", "json", "pretty", "ron", "toml", "yaml"]
default = []
ini = ["serde_ini"]
json = ["serde_json"]
library = []
pretty = []
yaml = ["serde_yaml"]

[package.metadata.docs.rs]
features = ["all"]
